--- a/assets/css/appstyle.css
+++ b/assets/css/appstyle.css
@@ -35,6 +35,7 @@
      }
    .sidebar {
       min-height: 100vh;
+      height: 100%;
       background-color: var(--dark);
     }
     .sidebar .nav-link {
@@ -117,12 +118,22 @@
 #mainNav .navbar-nav .nav-item .active {
   color: #23A980 !important;
 }
+.card_dashboard:hover{
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
  .card_dashboard{
         background-color: var(--white);
         border: none !important;
     }
      .card_dashboard .card-body{
         padding: 16px ;
+     }
+     .icon_card{
+      padding: 14px;
+      border-radius: 50%;
+      background-color: var(--clr_darkash);
+      aspect-ratio: 1/1;
+      text-align: center;
      }
 .bg_trans_white{
   background-color: rgba(255, 255, 255, 0.8) !important;
@@ -378,6 +389,13 @@ text-align: center;
     border-color: #0e773e !important;
     color: #ffffff !important;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
+}
+.btn_cost_org:hover{
+  background-color: transparent !important ;
+    border-color: #0e773e !important;
+    color: #0e773e !important;
+    border: 1px solid  #0e773e;
+
 }
 .btn_cost_trans{
   background-color: transparent !important;
@@ -753,6 +771,19 @@ font-weight: 700 !important;
   font-weight: 400;
   line-height: 125% !important;
   border-radius: 8px !important;
+  border: 1px solid #838383 !important;
+}
+.formselecttxt_date {
+  padding: 15px !important;
+  color: #000 !important;
+  font-family: "Poppins", sans-serif !important;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 125% !important;
+  border-radius: 8px ;
+  border-bottom-right-radius: 0px;
+  border-top-right-radius: 0px;
   border: 1px solid #838383 !important;
 }
 .caseStudiesSliderTxt{
